--- a/hw14/news/templates/news/add_news.html
+++ b/hw14/news/templates/news/add_news.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Добавить новость</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Добавить новость{% endblock %}
+
+{% block content %}
     <h1>Добавить новость</h1>
     <form method="post">
         {% csrf_token %}
@@ -11,5 +10,4 @@
         <button type="submit">Сохранить новость</button>
     </form>
     <p><a href="{% url 'news:news_list' %}">Назад к списку новостей</a></p>
-</body>
-</html>
+{% endblock %}
